# openwrt-grpc-agent

./: README.md  c-ares.Makefile
abseil-cpp/: Makefile
grpc/: Config.in  Makefile
grpc-exec/: Makefile
grpc-exec/files/etc/config/: grpc_exec
grpc-exec/src/: CMakeLists.txt
